<resources>
    <string name="app_name">CelebrityApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_all">All Celebrities</string>
    <string name="menu_industries">Industries</string>
    <string name="menu_favorites">Favorites</string>
    <string name="item_communicate">Communicate</string>
    <string name="celebrities">Celebrities</string>
    <string name="file_i_o">FILE I/O</string>
    <string name="title_activity_celebrity_list">CelebrityListActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_view_celebrities">ViewCelebrities</string>

    <string name="add_remove">Add/Remove</string>
    <string name="add">Add</string>
    <string name="first_name_label">First Name:</string>
    <string name="first_name_hint">John</string>
    <string name="last_name_label">Last Name:</string>
    <string name="last_name_hint">Smith</string>
    <string name="height">Height:</string>
    <string name="height_hint">5\'9\'\'</string>
    <string name="dob_label">Date of birth:</string>
    <string name="dob_hint">01/01/1980</string>
    <string name="industry_label">Industry:</string>
    <string name="industry_hint">Actor</string>
    <string name="add_celebrity">Add Celebrity</string>

</resources>
