<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/celebrities">
            <menu>
                <item
                    android:id="@+id/nav_all"
                    android:icon="@drawable/ic_menu_all"
                    android:title="@string/menu_all" />
                <item
                    android:id="@+id/nav_industries"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_industries" />

                <item
                    android:id="@+id/nav_favs"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_favorites" />
            </menu>
        </item>
    </group>

    <item android:title="@string/add_remove" >
        <menu>
            <item
                android:id="@+id/nav_add"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/add" />
        </menu>
    </item>

    <item android:title="@string/item_communicate">
        <menu>
            <item
                android:id="@+id/nav_fileio"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/file_i_o" />
        </menu>
    </item>

</menu>
