<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.celebrityapp.ui.main.MainFragment"
        android:label="Main"
        tools:layout="@layout/fragment_container"/>

    <fragment
        android:id="@+id/nav_all"
        android:name="com.example.celebrityapp.ui.celebrity.CelebrityFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_view_celebrities" />

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.celebrityapp.ui.industry.IndustryFragment"
        android:label="@string/menu_industries"
        tools:layout="@layout/fragment_container" />

    <fragment
        android:id="@+id/nav_industries"
        android:name="com.example.celebrityapp.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_slideshow" />
</navigation>